--- a/buildspec.yml
+++ b/buildspec.yml
@@ -31,5 +31,5 @@ phases:
       - make build
 
       - terraform init
-      - terraform plan --var-file=".${ENV}.tfvars" -var="image_tag=${TAG}" -no-color -input=false -out plan.out
+      - terraform plan --var-file="./${ENV}.tfvars" -var="image_tag=${TAG}" -no-color -input=false -out plan.out
       - terraform apply -auto-approve -no-color -input=false plan.out
