--- a/buildspec.yml
+++ b/buildspec.yml
@@ -30,3 +30,27 @@ phases:
       - echo "Building version ${TAG}"
       - cd "${CODEBUILD_SRC_DIR}"
       - make build
+
+      - terraform init
+      - terraform plan -target=module.network --var-file="./${ENV}.tfvars" -var="image_tag=${TAG}" -no-color -input=false -out plan.out
+      - terraform apply -auto-approve -no-color -input=false plan.out
+
+  post_build:
+    commands:
+      - |
+        if [ $CODEBUILD_BUILD_SUCCEEDING != 0 ]; then
+          NEWTAG=''
+          while [ "${NEW_TAG}" != "${TAG}" ];
+          do
+            NEW_SERVICE_ARN=$(aws ecs list-services --cluster ${APP_NAME}-${ENV}-cluster | jq -r .serviceArns[])
+            NEW_TASKDEF_ARN=$(aws ecs describe-services --cluster ${APP_NAME}-${ENV}-cluster --service ${NEW_SERVICE_ARN} | jq -r .services[].taskDefinition)
+            NEW_TAG=$(aws ecs describe-task-definition --task-definition ${NEW_TASKDEF_ARN} | jq -r .taskDefinition.containerDefinitions[].image | tr ':' ' ' | awk '{print $2}')
+            echo "Waiting until new image started... Tag: ${TAG} New tag: ${NEW_TAG}"
+            if [ "${NEW_TAG}" != ${TAG} ]; then
+              sleep 10
+            fi
+          done
+        else
+          echo "Build failed"
+        fi
+      - echo "Cluster has been deployed"
