--- a/app/Makefile
+++ b/app/Makefile
@@ -1,15 +1,15 @@
 TAG ?= latest
 REGISTRY_ID ?= 480681066960
-REPOSITORY_REGION ?= us-east-2
-APP_NAME ?= app
-ENV_NAME ?= stage
-NAME_CONTAINER ?= nginx
-REPO_NAME = $(REGISTRY_ID).dkr.ecr.$(REPOSITORY_REGION).amazonaws.com/${APP_NAME}-${ENV_NAME}-${NAME_CONTAINER}
+REPOSITORY_REGION ?= us-east-1
+APP ?= app
+ENV ?= env
+NAME_CONTAINER ?= container
+REPO_NAME = $(REGISTRY_ID).dkr.ecr.$(REPOSITORY_REGION).amazonaws.com/$(APP)-$(ENV)-$(NAME_CONTAINER)
 
 .PHONY: build
 build:
 	$(MAKE) docker-login
-	docker build -t $(REPO_NAME):$(TAG) ./web/.
+	docker build -t $(REPO_NAME):$(TAG) ./web/
 	docker push $(REPO_NAME):$(TAG)
 
 .PHONY: docker-login
