--- a/config/buildspec.yml
+++ b/config/buildspec.yml
@@ -5,8 +5,8 @@ env:
     CI: "true"
     REPOSITORY_REGION: "us-east-2"
     ENV: "dev"
-    APP_NAME: "web"
-    NAME_CONTAINER: nginx
+    APP: "web"
+    NAME_CONTAINER: "nginx"
     TERRAFORM_VERSION: "1.0.2"
 
 phases:
@@ -18,10 +18,10 @@ phases:
       - export REPO_NAME="${REGISTRY_ID}.dkr.ecr.${REPOSITORY_REGION}.amazonaws.com/${APP_NAME}-${ENV}-${NAME_CONTAINER}"
       - pip install jq
       - echo "Getting existing tag"
-      - SERVICE_ARN=$(aws ecs list-services --cluster ${APP_NAME}-${ENV}-cluster | jq -r .serviceArns[])
+      - SERVICE_ARN=$(aws ecs list-services --cluster ${APP}-${ENV}-${NAME_CONTAINER}-cluster | jq -r .serviceArns[])
       - echo "Current service arn is ${SERVICE_ARN}"
       - export SERVICE_ARN
-      - TASKDEF_ARN=$(aws ecs describe-services --cluster ${APP_NAME}-${ENV}-cluster --service ${SERVICE_ARN} | jq -r .services[].taskDefinition)
+      - TASKDEF_ARN=$(aws ecs describe-services --cluster ${APP}-${ENV}-${NAME_CONTAINER}-cluster --service ${SERVICE_ARN} | jq -r .services[].taskDefinition)
       - echo "Current taskdef arn is ${TASKDEF_ARN}"
       - export TASKDEF_ARN
       - EXISTING_TAG=$(aws ecs describe-task-definition --task-definition ${TASKDEF_ARN} | jq -r .taskDefinition.containerDefinitions[].image | tr ':' ' ' | awk '{print $2}')
