--- a/config/buildspec.yml
+++ b/config/buildspec.yml
@@ -33,8 +33,8 @@ phases:
       - echo "Build and push docker images"
       - export TAG="${CODEBUILD_RESOLVED_SOURCE_VERSION}-${ENV}"
       - echo "Building version ${TAG}"
-      - cd "${CODEBUILD_SRC_DIR}"
       - echo "Current codebuild src directory is ${CODEBUILD_SRC_DIR}"
+      - cd "${CODEBUILD_SRC_DIR}/app"
       - make build
 
       - terraform init
